// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntityMetadata Deleted Foo 1`] = `
<div
  className="dd flex-column has-shadow has-background py-2 g-2"
>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Name
    </p>
    <p
      className="dd text-body1"
    >
      Foo deleted
    </p>
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Type
    </p>
    <p
      className="dd text-body1"
    >
      Foo
    </p>
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      ID
    </p>
    <p
      className="dd text-body1"
    >
      fb62be03-a0a9-4689-9987-bacee0e7692d
    </p>
  </div>
  <div
    className="dd flex-column dd flex-grow overflow-y-scroll"
  >
    <button
      className="dd button has-background hoverable text-button"
      onClick={[Function]}
      type="button"
    >
      <p
        className="dd text-subtitle2"
      >
        Version 
        0
      </p>
      <p
        className="dd text-body1"
      >
        3/10/2021, 7:19:39 PM
      </p>
      <p
        className="dd text-body1"
      >
        a10e49cd-2f4e-4249-b8ee-eaca8466939b
      </p>
    </button>
    <button
      className="dd button has-background hoverable text-button"
      onClick={[Function]}
      type="button"
    >
      <p
        className="dd text-subtitle2"
      >
        Version 
        1
        <span
          className="dd has-background text-caption p-1 is-rounded bg-danger"
        >
          Deleted
        </span>
        <span
          className="dd has-background text-caption p-1 is-rounded bg-primary"
        >
          Published
        </span>
      </p>
      <p
        className="dd text-body1"
      >
        3/11/2021, 9:19:39 PM
      </p>
      <p
        className="dd text-body1"
      >
        a10e49cd-2f4e-4249-b8ee-eaca8466939b
      </p>
    </button>
  </div>
  <button
    className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
    disabled={true}
    type="button"
  >
    Publish
  </button>
</div>
`;

exports[`Storyshots Domain/EntityMetadata Full Foo 1`] = `
<div
  className="dd flex-column has-shadow has-background py-2 g-2"
>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Name
    </p>
    <p
      className="dd text-body1"
    >
      Foo 1
    </p>
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Type
    </p>
    <p
      className="dd text-body1"
    >
      Foo
    </p>
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      ID
    </p>
    <p
      className="dd text-body1"
    >
      fc66b4d7-61ff-44d4-8f68-cb7f526df046
    </p>
  </div>
  <div
    className="dd flex-column dd flex-grow overflow-y-scroll"
  >
    <button
      className="dd button has-background hoverable text-button"
      onClick={[Function]}
      type="button"
    >
      <p
        className="dd text-subtitle2"
      >
        Version 
        0
        <span
          className="dd has-background text-caption p-1 is-rounded bg-primary"
        >
          Published
        </span>
      </p>
      <p
        className="dd text-body1"
      >
        3/11/2021, 9:19:39 PM
      </p>
      <p
        className="dd text-body1"
      >
        a10e49cd-2f4e-4249-b8ee-eaca8466939b
      </p>
    </button>
  </div>
  <button
    className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
    disabled={true}
    type="button"
  >
    Publish
  </button>
</div>
`;

exports[`Storyshots Domain/EntityMetadata New Foo 1`] = `
<div
  className="dd flex-column has-shadow has-background py-2 g-2"
>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Name
    </p>
    <p
      className="dd text-body1"
    >
      
    </p>
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Type
    </p>
    <p
      className="dd text-body1"
    >
      Foo
    </p>
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      ID
    </p>
    <p
      className="dd text-body1"
    >
      e225c183-9a1d-4fd5-b259-cdc37421d5ce
    </p>
  </div>
  <div
    className="dd flex-column dd flex-grow overflow-y-scroll"
  />
  <button
    className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
    disabled={true}
    type="button"
  >
    Publish
  </button>
  <div
    className="dd message has-background has-shadow bg-danger"
  >
    <div
      className="dd stack"
    >
      <p
        className="dd text-body1"
      >
        NotFound: No such entity
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityMetadata Slow Full Foo 1`] = `
<div
  className="dd flex-column has-shadow has-background py-2 g-2"
>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Name
    </p>
    <p
      className="dd text-body1"
    />
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      Type
    </p>
    <p
      className="dd text-body1"
    />
  </div>
  <div
    className="dd mx-2"
  >
    <p
      className="dd text-subtitle2"
    >
      ID
    </p>
    <p
      className="dd text-body1"
    >
      fc66b4d7-61ff-44d4-8f68-cb7f526df046
    </p>
  </div>
  <div
    className="dd flex-column dd flex-grow overflow-y-scroll"
  >
    <div
      className="dd loader"
    />
  </div>
  <button
    className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
    disabled={true}
    type="button"
  >
    Publish
  </button>
</div>
`;
